--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,22 @@
+@import url("https://api.fontshare.com/css?f[]=satoshi@300,400,900&display=swap");
+
 .body {
-  font-family: sans-serif;
+  font-family: "Satoshi", sans-serif;
+  font-weight: 900;
   margin: 5% 10% 5%;
 }
 
 .form {
   display: inline-block;
 }
+
+nav > a {
+  display: inline-block;
+  color: black;
+}
+
+a:link {
+  color: black;
+  text-decoration: none;
+}
+/* colors are place-holders */
