--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,14 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
+
+div {
   margin: 0;
-  font-family: sans-serif;
+  font-family: "DM Sans", sans-serif;
+  font-weight: 400;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+body {
+  background-color: #e1e1e1;
+}
+html {
+  color: white;
 }
