--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,13 @@
 @import url("https://api.fontshare.com/css?f[]=satoshi@300,400,900&display=swap");
 
+.thyme-logo {
+  font-weight: 900;
+  font-size: 115px;
+  z-index: 100;
+  margin: -15%;
+  position: fixed;
+  left: 20%;
+}
 .body {
   font-family: "Satoshi", sans-serif;
   font-weight: 900;
@@ -19,3 +27,17 @@ a:link {
   text-decoration: none;
 }
 /* colors are place-holders */
+
+@media only screen and (max-width: 600px) {
+  .thyme-logo > h1 {
+    font-weight: 900;
+    font-size: 110px;
+    z-index: 100;
+    margin: 10%;
+    position: fixed;
+    left: 10%;
+  }
+  .leaf-container {
+    flex-direction: column;
+  }
+}
