--- a/client/src/components/Form.css
+++ b/client/src/components/Form.css
@@ -5,11 +5,23 @@
 /* .form-container {
   display: flex;
 } */
+html {
+  background-image: url("https://i.imgur.com/1AGWlJM.jpg");
+  background-position: center;
+  background-size: 150vw;
+}
 
 label {
   line-height: 30px;
   display: block;
   font-weight: 600;
+}
+
+.button {
+  font-family: "Chillax";
+  font-weight: 600;
+  font-size: 20px;
+  margin: 5% 0 0;
 }
 
 html {
@@ -18,7 +30,22 @@ html {
 }
 
 div .form-container form {
-  border: black;
+  /* border: 0.5px solid; */
   border-width: 3px;
-  margin: 30%;
+  margin: 27%;
+  text-align: center;
+  border-radius: 0;
+}
+
+.card {
+  width: fit-content;
+  padding: 3%;
+}
+
+#leaf-label {
+  font-family: "Chillax";
+  font-weight: 600;
+  font-size: 25px;
+  color: black;
+  margin: 0 0 8%;
 }
