--- a/client/src/components/Leaf.css
+++ b/client/src/components/Leaf.css
@@ -20,7 +20,7 @@ h3 {
 article {
   font-size: inherit;
   border-radius: 50%;
-  margin: 0.5%;
+  margin: 0.75%;
   padding: 4%;
   text-align: center;
   width: fit-content;
@@ -36,7 +36,7 @@ article {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-end;
-  margin: 2.5%;
+  margin: 7%;
 }
 
 .leaf-container > div {
@@ -50,12 +50,18 @@ img:hover {
 
 @media only screen and (max-width: 600px) {
   article {
-    width: fit-content;
-    margin: 1%;
-    padding: 10%;
+    height: fit-content;
+    margin: 3%;
+    font-size: 2.5vw;
+    padding: 8%;
   }
 
-  .leaf-container {
+  html {
+    background-size: 200vh;
+  }
+
+  .leaf-container > div {
     flex-direction: column;
+    justify-content: center;
   }
 }
