--- a/client/src/components/Form.css
+++ b/client/src/components/Form.css
@@ -32,9 +32,10 @@ html {
 div .form-container form {
   /* border: 0.5px solid; */
   border-width: 3px;
-  margin: 27%;
+  margin: 25% 25% 0;
   text-align: center;
   border-radius: 0;
+  left: 10%;
 }
 
 .card {
@@ -48,4 +49,19 @@ div .form-container form {
   font-size: 25px;
   color: black;
   margin: 0 0 8%;
+}
+
+@media only screen and (max-width: 600px) {
+  #leaf-label {
+    font-size: 4vw;
+  }
+
+  .button {
+    width: 15vw;
+    font-size: 3vw;
+  }
+
+  .card {
+    margin: 15% 0 0;
+  }
 }
