--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,12 +4,6 @@
 
 @import "bulma/css/bulma.css";
 
-html {
-  background-image: url("https://i.imgur.com/1AGWlJM.jpg");
-  background-position: top;
-  background-repeat: no-repeat;
-}
-
 .thyme-logo h1 {
   font-weight: 900;
   font-size: 20vw;
@@ -18,7 +12,6 @@ html {
   position: fixed;
   left: 10%;
   font-family: "Chillax", sans-serif;
-  height: 125px;
 }
 
 .leaf-link {
@@ -27,15 +20,6 @@ html {
   left: 3%;
   z-index: 10;
   background-color: transparent;
-}
-
-.body {
-  font-family: "Satoshi", sans-serif;
-  font-weight: 900;
-}
-
-.form {
-  display: inline-block;
 }
 
 .leaf-link:link {
@@ -48,6 +32,34 @@ html {
   border: 1px solid;
   padding: 1%;
 }
+
+.thymeline {
+  margin: 33% 10% 0;
+  position: fixed;
+  left: 3%;
+  z-index: 13;
+  background-color: transparent;
+}
+
+.thymeline:link {
+  color: black;
+  text-decoration: none;
+  font-family: "Chillax";
+  font-weight: 600;
+  font-size: 3vw;
+  background-color: transparent;
+  border: 1px solid;
+  padding: 1%;
+}
+
+.body {
+  font-family: "Satoshi", sans-serif;
+  font-weight: 900;
+}
+
+/* .form {
+  display: inline-block;
+} */
 
 a:visited {
   color: black;
@@ -69,6 +81,10 @@ button:hover {
   }
 
   .leaf-link:link {
+    font-size: 5vw;
+  }
+
+  .thyme-line:link {
     font-size: 5vw;
   }
 }
