--- a/client/src/components/Leaf.css
+++ b/client/src/components/Leaf.css
@@ -21,14 +21,14 @@ h3 {
   font-size: inherit;
   border-radius: 50%;
   margin: 0.75%;
-  padding: 4%;
+  padding: 3%;
   text-align: center;
   width: fit-content;
   background-image: url(https://i.imgur.com/AIfsGzV.png);
   background-position: center;
   background-size: 115%;
   filter: drop-shadow(1.5px 1.5px 1px black);
-  min-width: 250px;
+  min-width: 275px;
   max-width: 450px;
 }
 
@@ -49,11 +49,12 @@ img:hover {
 }
 
 @media only screen and (max-width: 600px) {
-  article {
+  article .leaf-container {
     height: fit-content;
-    margin: 3%;
-    font-size: 2.5vw;
-    padding: 8%;
+    margin: 5%;
+    font-size: 2vw;
+
+    padding: 5%;
   }
 
   .leaf-container > div {
