--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,6 +16,24 @@
   color: transparent;
   background-color: black;
   background-clip: text;
+  top: 0;
+}
+
+.login-form > #loginName {
+  color: black;
+  text-decoration: none;
+  font-family: "Chillax";
+  font-weight: 600;
+  font-size: 2vw;
+  padding: 0 1% 0;
+  opacity: 50%;
+  border: 1px solid black;
+  margin-top: 13%;
+  left: 73%;
+  z-index: 10;
+  top: 0;
+  width: 15vw;
+  position: fixed;
 }
 
 .leaf-link {
@@ -24,6 +42,7 @@
   left: 3%;
   z-index: 10;
   background-color: transparent;
+  top: 0;
 }
 
 .leaf-link:link {
@@ -35,6 +54,7 @@
   background-color: transparent;
   border: 1px solid;
   padding: 1%;
+  top: 0;
 }
 
 .thymeline {
@@ -43,6 +63,7 @@
   left: 3%;
   z-index: 13;
   background-color: transparent;
+  top: 0;
 }
 
 .thymeline:link {
@@ -54,6 +75,7 @@
   background-color: transparent;
   border: 1px solid;
   padding: 1%;
+  top: 0;
 }
 
 .body {
