--- a/client/src/components/Thymeline.css
+++ b/client/src/components/Thymeline.css
@@ -31,7 +31,6 @@ h5 {
   border-radius: 0;
   background-position: center;
   background-size: 150%;
-
   padding: 4%;
   border: 0.5px solid white;
   width: 330px;
@@ -49,7 +48,7 @@ h5 {
   margin: 25% 7% 7%;
 }
 
-.scissors {
+#scissors {
   margin-left: 85%;
   transform: rotate(180deg);
 }
